--- a/src/containers/AuthenticationPage/SignupForm/SignupForm.module.css
+++ b/src/containers/AuthenticationPage/SignupForm/SignupForm.module.css
@@ -101,7 +101,7 @@
   margin-bottom: 30px;
 }
 .flex_center{
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: center;
   padding: 60px 0px 30px 0px;
